# find-rs-mod

./: CHANGELOG.md  Cargo.toml  README.md
src/: functions.rs  lib.rs  main.rs
t/: README.md
