[package]
name = "find-rs-mod"
version = "0.2.2"
edition = "2024"
description = "List Rust source files in mod order"
repository = "https://github.com/qtfkwk/find-rs-mod"
license = "MIT"
categories = ["development-tools", "filesystem", "command-line-utilities"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "wrap_help"] }
clap-cargo = "0"
